# opensre-hackathon

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  app.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
