[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opensre-env"
version = "1.0.0"
description = "An autonomous SRE/DevOps environment where agents must troubleshoot, fix, and restart a broken web server via a simulated bash terminal."
authors = [
    {name = "Mithilesh"},
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "flask",
    "requests",
]
requires-python = ">=3.10"

[tool.setuptools]
py-modules = ["env", "models", "inference", "app"]

[project.entry-points."openenv.environments"]
opensre = "env:SREEnv"