[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opensre-env"
version = "1.0.0"
description = "Autonomous SRE/DevOps environment."
authors = [{name = "Mithilesh"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "flask",
    "requests",
    "openenv-core>=0.2.0",
]
requires-python = ">=3.10"

[project.scripts]
# This is the 'server' entry point the validator is looking for
server = "server.app:app"

[project.entry-points."openenv.environments"]
opensre = "env:SREEnv"

[tool.setuptools]
py-modules = ["env", "models", "inference"]
packages = ["server"]